--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,5 @@
+@import 'scss-reset/reset';
 @import 'utils/mixins';
-@import 'blocks/hero';
 
 html {
   font-family: 'Montserrat', sans-serif;
@@ -11,6 +11,6 @@ body {
 
 .container {
   padding: 0 20px;
-  max-width: 1024px;
+  width: 320px;
   margin: 0 auto;
 }
