--- a/src/components/ModulesList/ModulesList.scss
+++ b/src/components/ModulesList/ModulesList.scss
@@ -1,2 +1,72 @@
 @import '../../styles/utils/vars';
 @import '../../styles/utils/mixins';
+
+.modules {
+  &__module {
+    margin: 0 0 24px;
+  }
+
+  &__title {
+    margin: 0 0 24px;
+    text-transform: uppercase;
+    font-weight: 700;
+
+    color: $colorGreen;
+
+  }
+  &__list {
+
+  }
+}
+
+.module {
+  &__title {
+    margin: 0 0 24px;
+
+    text-align: center;
+    font-weight: 700;
+
+    color: $colorGreen;
+  }
+
+  &__image-container {
+    margin: 0 0 24px;
+    width: 280px;
+    height: 150px;
+  }
+
+  &__image {
+    width: 100%;
+    height: 100%;
+
+    object-fit: cover;
+    object-position: top;
+
+    border-radius: 24px;
+  }
+
+  &__description {
+    margin: 0 0 24px;
+    text-align: justify;
+    line-height: 1.5;
+
+    b {
+      font-weight: 700;
+    }
+  }
+
+  &__report-button {
+    display: flex;
+    width: 100%;
+    height: 46px;
+    justify-content: center;
+    align-items: center;
+
+    text-decoration: none;
+    font-weight: 700;
+    border-radius: 48px;
+
+    background-color: $colorGreen;
+    color: #fff;
+  }
+}
