added hover on buttons

--- a/src/components/ModulesList/ModulesList.scss
+++ b/src/components/ModulesList/ModulesList.scss
@@ -68,5 +68,14 @@
 
     background-color: $colorGreen;
     color: #fff;
+
+    border: 2px solid transparent;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      background-color: #fff;
+      color: $colorGreen;
+      border-color: $colorGreen;
+    }
   }
 }
