--- a/src/components/ModulesList/ModulesList.scss
+++ b/src/components/ModulesList/ModulesList.scss
@@ -15,7 +15,7 @@
 
   }
   &__list {
-
+    margin: 0 0 24px;
   }
 }
 
@@ -33,6 +33,9 @@
     margin: 0 0 24px;
     width: 280px;
     height: 150px;
+
+    border-radius: 24px;
+    overflow: hidden;
   }
 
   &__image {
@@ -43,6 +46,12 @@
     object-position: top;
 
     border-radius: 24px;
+
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__description {
