--- a/src/components/ModulesList/ModulesList.scss
+++ b/src/components/ModulesList/ModulesList.scss
@@ -12,7 +12,6 @@
     font-weight: 700;
 
     color: $colorGreen;
-
   }
   &__list {
     margin: 0 0 24px;
@@ -27,6 +26,10 @@
     font-weight: 700;
 
     color: $colorGreen;
+  }
+
+  &__carousel {
+    margin-bottom: 24px;
   }
 
   &__image-container {
@@ -71,6 +74,7 @@
     justify-content: center;
     align-items: center;
 
+    font-size: 16px;
     text-decoration: none;
     font-weight: 700;
     border-radius: 48px;
