--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -2,7 +2,7 @@
 @import '../../styles/utils/mixins';
 
 .about {
-  &__title {
+  /* &__title {
     margin: 0 0 24px;
     font-size: 24px;
     font-weight: 700;
@@ -22,7 +22,7 @@
       background-repeat: no-repeat;
       background-position:  center;
     }
-  }
+  } */
 
   &__subtitle {
     margin: 0 0 24px;
