--- a/src/components/ModulesList/ModulesList.scss
+++ b/src/components/ModulesList/ModulesList.scss
@@ -47,7 +47,7 @@
     justify-content: space-between;
 
     margin: 0 0 24px;
-    padding: 14px;
+    padding: 24px 14px;
     width: 280px;
     height: 160px;
 
