--- a/src/styles/blocks/section.scss
+++ b/src/styles/blocks/section.scss
@@ -4,6 +4,7 @@
 
     position: relative;
     margin: 0 auto 24px;
+    padding: 0 0;
     font-size: 24px;
     font-weight: 700;
     text-align: center;
@@ -26,12 +27,11 @@
     }
 
     &::before {
-      left: -40px;
+      transform: translate(-120%);
     }
 
     &::after {
-      right: -40px;
-      transform: scaleX(-1);
+      transform: scaleX(-1) translateX(-20%);
     }
   }
 }
