--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -9,37 +9,56 @@
   &__person {
     margin: 0 0 48px;
   }
-
 }
 
 .person {
+  position: relative;
   padding: 32px 16px 32px;
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  border: 1px solid #e2e2e2;
+  border: 1px solid $colorBeigeDark;
   border-radius: 24px;
 
   transition: box-shadow 0.3s ease-in-out;
 
+  &::before {
+    position: absolute;
+    left: calc((280px - 210px) / 2 - 5px);
+    top: calc(32px - 5px);
+    content:'';
+    display: block;
+    border-radius: 50%;
+    height: 220px;
+    width: 220px;
+    border: 2px solid $colorBeigeDark;
+
+    // background-color: $colorGreen;
+  }
+
   &:hover {
-    box-shadow: 2px 2px #e2e2e2;
+    box-shadow: 1px 1px 4px $colorGreen;
   }
 
   &__image-container {
+    position: relative;
     margin: 0 0 24px;
     width: 210px;
     height: 210px;
     border-radius: 50%;
     overflow: hidden;
+
     transition: transform .3s ease-in-out;
     &:hover {
       transform: scale(1.1);
     }
+
+
   }
 
   &__image {
+    width: 210px;
   }
 
   &:nth-child(2) &__image {
