--- a/src/components/VideoReviews/VideoReviews.scss
+++ b/src/components/VideoReviews/VideoReviews.scss
@@ -4,6 +4,10 @@
     margin: 0 0 24px;
     width: 100%;
     height: 100%;
+
+    &:last-child {
+      margin: 0;
+    }
   }
 
   &__item iframe {
