--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @import 'utils/mixins';
 @import 'blocks/page';
 @import 'blocks/section';
+@import 'blocks/carousel';
 
 html {
   font-family: 'Montserrat', sans-serif;
