--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -22,12 +22,68 @@
   }
 
   &__list-item {
-    margin: 0 0 8px;
+    margin: 0 0 16px;
     text-align: justify;
+    font-size: 14px;
+
+    &--state {
+      margin-right: 12px;
+      padding: 8px 8px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      font-size: 12px;
+      font-weight: 700;
+      color: #fff;
+
+
+      border-radius: 8px;
+      float: left;
+      box-shadow: 2px 2px 4px #333;
+
+      transition: transform 200ms linear;
+    }
+
+    &:hover &--state {
+      transform: scale(1.1);
+    }
+
+    &:nth-child(1) &--state {
+      background-color: #A05E02;
+    }
+
+    &:nth-child(2) &--state {
+      background-color: #074030;
+    }
+
+    &:nth-child(3) &--state {
+      background-color: #ECC064;
+      color: #074030;
+    }
+
+    &:nth-child(4) &--state {
+      background-color: #15694F;
+    }
+
+    &:nth-child(5) &--state {
+      background-color: #B88744;
+    }
+
+    &:nth-child(6) &--state {
+      background-color: #F7F0E8;
+      color: #2B2B2A;
+    }
+
   }
+
+
 
   &__image {
     margin: 0 0 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 
     &--ukraine-map {
@@ -39,7 +95,6 @@
     }
 
     &--age-graph {
-      background-image: url('/images/about/about--age-graph.png');
     }
 
     &--conditions-graph {
