--- a/src/components/VideoReviews/VideoReviews.scss
+++ b/src/components/VideoReviews/VideoReviews.scss
@@ -1,5 +1,4 @@
 .video-reviews {
-
   &__item {
     margin: 0 0 24px;
     width: 100%;
@@ -17,4 +16,12 @@
     top: 0px;
     border-radius: 24px;
   }
+}
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
 }
