fixed slider buttons color

--- a/src/styles/blocks/carousel.scss
+++ b/src/styles/blocks/carousel.scss
@@ -61,6 +61,6 @@
 }
 
 .carousel .carousel-control-prev .carousel-control-prev-icon,
-.carousel .carousel-control-next .carousel-control-next-icon, {
+.carousel .carousel-control-next .carousel-control-next-icon {
   filter: none;
 }
