--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -3,15 +3,23 @@
 
 .team {
   &__list {
+    & .slide {
+      height: 420px;
+    }
 
+    & .carousel-inner {
+      display: flex;
+      align-items: start;
+    }
   }
-
   &__person {
-    margin: 0 0 48px;
+    margin: 0 auto;
   }
 }
 
 .person {
+  width: 250px;
+  height: 360px;
   position: relative;
   padding: 32px 16px 32px;
   display: flex;
@@ -23,9 +31,7 @@
 
   transition: box-shadow 0.3s ease-in-out;
 
-  background-color: $colorBeigeDark;
-
-
+  background-color: $colorBeige;
 
   &:hover {
     box-shadow: 1px 1px 4px $colorGreen;
@@ -34,21 +40,21 @@
   &__image-container {
     position: relative;
     margin: 0 0 24px;
-    width: 210px;
-    height: 210px;
+    width: 180px;
+    height: 180px;
     border-radius: 50%;
     overflow: hidden;
 
     border: 3px solid #fff;
 
-    transition: transform .3s ease-in-out;
+    transition: transform 0.3s ease-in-out;
     &:hover {
       transform: scale(1.05);
     }
   }
 
   &__image {
-    width: 210px;
+    width: 100%;
   }
 
   &__name {
