--- a/src/components/Infographics/Infographics.scss
+++ b/src/components/Infographics/Infographics.scss
@@ -1,3 +1,56 @@
+@import '../../styles/utils/mixins';
+@import '../../styles/utils/vars';
+
 .infographics {
-  
+  color: $colorGreen;
+
+& .carousel {
+  height: 360px;
+
+  &-control-prev, &-control-next {
+
+  }
+  &-control-prev {
+    transform: translate(-80%, -110%);
+  }
+
+  &-control-next {
+    transform: translate(80%, -110%);
+  }
+
+}
+
+& .carousel-item {
+  padding: 0 0 40px;
+}
+  &__item {
+    margin: 0 auto 20px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    border-radius: 18px;
+    padding: 14px;
+    background-color: $colorBeige;
+    display: flex;
+    width: 220px;
+
+    align-items: center;
+    gap: 12px;
+  }
+
+  &__icon {
+    fill: $colorGreen;
+    width: 64px;
+    height: 60px;
+    flex-shrink: 0;
+  }
+
+  &__number {
+    font-weight: 700;
+  }
+
+  &__description {
+
+  }
 }
