--- a/src/components/VideoReviews/VideoReviews.scss
+++ b/src/components/VideoReviews/VideoReviews.scss
@@ -1,3 +1,6 @@
+@import '../../styles/utils/mixins';
+@import '../../styles/utils/vars';
+
 .video-reviews {
   &__item {
     margin: 0 0 24px;
@@ -16,6 +19,18 @@
     top: 0px;
     border-radius: 24px;
   }
+
+  & .carousel {
+    height: 540px;
+
+    &-inner {
+      height: 100%;
+      display: flex;
+      align-items: start;
+    }
+
+    justify-content: start;
+  };
 }
 
 .embed-container {
