added responsiveness, prepared for adaptive layout, added sections and descriptions

--- a/src/components/Participants/Participants.scss
+++ b/src/components/Participants/Participants.scss
@@ -1,21 +1,7 @@
 @import '../../styles/utils/vars';
 @import '../../styles/utils/mixins';
 
-.demographics {
-
-  &__subtitle {
-    margin: 0 0 24px;
-    font-weight: 700;
-
-    text-align: center;
-
-    color: $colorGreen
-  }
-
-  &__description {
-    margin: 0 0 24px;
-    text-align: justify;
-  }
+.participants {
 
   &__list {
     margin: 0 0 24px;
@@ -81,7 +67,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 280px;
+    width: 100%;
 
     & img {
       width: 100%;
@@ -92,6 +78,10 @@
       width: 100%;
       object-fit: cover;
       object-position: left;
+    }
+
+    &--europe-map {
+      margin: 0 0 24px;
     }
 
 
