--- a/src/components/Concepts/Concepts.scss
+++ b/src/components/Concepts/Concepts.scss
@@ -3,7 +3,7 @@
 
 .concept {
   &__list {
-    padding: 40px 0;
+    padding: 40px 0 0;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
