--- a/src/components/Contacts/Contacts.scss
+++ b/src/components/Contacts/Contacts.scss
@@ -78,6 +78,8 @@ font-size: 14px;
     height: 280px;
 
     & iframe {
+      display: block;
+      margin: 0 auto;
       height: 280px;
       border-radius: 24px;
     }
