--- a/src/components/ModulesList/ModulesList.scss
+++ b/src/components/ModulesList/ModulesList.scss
@@ -26,7 +26,6 @@
 }
 
 .module {
-
   &__number {
     font-size: 12px;
 
@@ -46,17 +45,25 @@
     border-radius: 24px;
     overflow: hidden;
   }
-
-  &__content {
+  &__img-container {
     position: relative;
+  }
+
+  &__cover-text {
+    position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
+    top: 0;
+    bottom: 0;
+
+
     margin: 0 0 24px;
     padding: 24px 14px;
-    width: 280px;
-    height: 160px;
+
+    width: 100%;
+
 
     border-radius: 24px;
     overflow: hidden;
@@ -64,42 +71,15 @@
     background-repeat: no-repeat;
     background-position: top;
 
-/*     &::before {
-      position: absolute;
-      top: -26px;
-      left: 122px;
+  }
 
-      display: flex;
-      content: '';
-      height: 230px;
-      width: 255px;
-      border-radius: 50%;
-      border: 10px solid $colorBeigeDark;
-
-      z-index: 2;
-      overflow: hidden;
-      background-repeat: no-repeat;
-    } */
-
-/*     &::after {
-      position: absolute;
-      display: block;
-      height: 44px;
-      width: 160px;
-      content: '';
-
-      background-image: url('/images/decor/leaf-beige.png');
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-      z-index: 2;
-      bottom: 0;
-      right: 44px;
-
-      transform-origin: right bottom;
-      transform: rotate(90deg);
-    } */
-
+  &__cover {
+    position: relative;
+    margin: 0 0 24px;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
   }
 
   &__description {
@@ -112,59 +92,11 @@
     }
   }
 
+
+
   &__report-button {
-    display: flex;
-    width: 100%;
-    height: 46px;
-    justify-content: center;
-    align-items: center;
 
-    font-size: 16px;
-    text-decoration: none;
-    font-weight: 500;
-    border-radius: 48px;
-
-    background-color: $colorGreen;
-    color: #fff;
-
-    border: 1px solid transparent;
-
-    box-shadow: 0px 6px 23px 0px #004e176d;
-
-    transition: all 0.25s ease-in-out;
-
-    &:hover {
-      background-color: #fff;
-      color: $colorGreen;
-      border-color: $colorGreen;
-    }
   }
 
-  &:nth-child(1) &__content {
-    background-image: url('/images/modules/m1.png');
-  }
-  &:nth-child(2) &__content {
-    background-image: url('/images/modules/m2.png');
-  }
-  &:nth-child(3) &__content {
-    background-image: url('/images/modules/m3.png');
-  }
-  &:nth-child(4) &__content {
-    background-image: url('/images/modules/m4.png');
-  }
-  &:nth-child(5) &__content {
-    background-image: url('/images/modules/m5.png');
-  }
-  &:nth-child(6) &__content {
-    background-image: url('/images/modules/m6.png');
-  }
-  &:nth-child(7) &__content {
-    background-image: url('/images/modules/m7.png');
-  }
-  &:nth-child(8) &__content {
-    background-image: url('/images/modules/m8.png');
-  }
-  &:nth-child(9) &__content {
-    background-image: url('/images/modules/m9.png');
-  }
+
 }
