--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,18 +2,6 @@
 @import 'utils/mixins';
 @import 'blocks/page';
 @import 'blocks/section';
+@import 'blocks/container';
 @import 'blocks/carousel';
-
-html {
-  font-family: 'Montserrat', sans-serif;
-}
-
-body {
-  margin: 0;
-}
-
-.container {
-  padding: 0 20px;
-  max-width: 320px;
-  margin: 0 auto;
-}
+@import 'blocks/button';
