--- a/src/components/Concepts/Concepts.scss
+++ b/src/components/Concepts/Concepts.scss
@@ -8,17 +8,27 @@
     flex-direction: row;
     flex-wrap: wrap;
 
-    gap: 60px;
+    // gap: 60px;
     color: $colorGreen;
+
+    @include onTablet--m {
+     flex-direction: row;
+     column-gap: 20px;
+     row-gap: 48px;
+    }
   }
 
   &__item {
     position: relative;
-    width: 100%;
+    // width: 100%;
     padding: 40px 20px 20px;
-    /* border: 4px solid $colorGreen; */
-    border-radius: 24px;
+    border: 1px solid $colorGreen;
+    border-radius: 12px;
     background-color: $colorBeige;
+
+    @include onTablet--m {
+      width: 338px;
+    }
   }
 
   &__icon-container {
@@ -31,10 +41,11 @@
     align-items: center;
     height: 60px;
     width: 60px;
+
     background-color: $colorBeige;
     border-radius: 50%;
 
-    border: 0px solid $colorGreen;
+    border: 1px solid $colorGreen;
   }
 
   &__icon {
@@ -60,14 +71,9 @@
     text-align: center;
     font-size: 14px;
   }
-
 }
 
 .example {
   height: 100px;
   width: 100px;;
-}
-
-.example svg {
-
 }
