--- a/src/components/Participants/Participants.scss
+++ b/src/components/Participants/Participants.scss
@@ -67,11 +67,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
+
+    @include onTablet--s {
+      align-items: end;
+    }
 
     & img {
       width: 100%;
       object-fit: cover;
+      object-position: center;
     }
 
     &--conditions-graph {
@@ -82,6 +86,10 @@
 
     &--europe-map {
       margin: 0 0 24px;
+
+      @include onTablet--s {
+        margin: 0;
+      }
     }
 
 
