--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -2,4 +2,18 @@
   padding: 0 20px;
   max-width: 320px;
   margin: 0 auto;
+
+  &--concepts {
+    @include onTablet--m {
+      max-width: 768px;
+      padding: 0 24px;
+    }
+  }
+
+  &--geo {
+    @include onTablet--s {
+      min-width: 576px;
+    }
+  }
+
 }
