--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -11,14 +11,43 @@
       display: flex;
       align-items: start;
     }
+
+    &--desktop {
+      display: none;
+
+      @include onTablet--s {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0 auto;
+        max-width: 696px;
+        row-gap: 8px;
+      }
+
+
+      @include onTablet--m {
+        row-gap: 86px;
+       }
+
+      @include onDesktop {
+        // gap: 0;
+
+      }
+
+      @include onDesktop--xl {
+        max-width: unset;
+      }
+    }
   }
+
   &__person {
     margin: 0 auto;
   }
+
+
 }
 
 .person {
-  width: 250px;
+  width: 248px;
   height: 360px;
   position: relative;
   padding: 32px 16px 32px;
@@ -26,7 +55,7 @@
   flex-direction: column;
   align-items: center;
 
-  border: 1px solid $colorBeigeDark;
+  // border: 1px solid $colorBeigeDark;
   border-radius: 24px;
 
   transition: box-shadow 0.3s ease-in-out;
@@ -34,7 +63,7 @@
   background-color: $colorBeige;
 
   &:hover {
-    box-shadow: 1px 1px 4px $colorGreen;
+    box-shadow: 0 0 8px $colorGreen;
   }
 
   &__image-container {
