--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -15,3 +15,15 @@
     @content;
   }
 }
+
+@mixin onDesktop {
+  @media (min-width: 992px) {
+    @content;
+  }
+}
+
+@mixin onDesktop--xl {
+  @media (min-width: 1200px) {
+    @content;
+  }
+}
