--- a/src/components/MentalState/MentalState.scss
+++ b/src/components/MentalState/MentalState.scss
@@ -1,7 +1,22 @@
 @import '../../styles/utils/vars';
 @import '../../styles/utils/mixins';
 
-.psychological-state {
+.mental-state {
+  &__content {
+    display: flex;
+    flex-direction: column;
+
+    @include onTablet--m {
+      flex-direction: row;
+      justify-content: center;
+    }
+
+    @include onDesktop {
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+    }
+  }
 
   &__list {
     margin: 0 0 24px;
@@ -23,7 +38,6 @@
       font-weight: 700;
       color: #fff;
 
-
       border-radius: 8px;
       float: left;
       box-shadow: 2px 2px 4px #333;
@@ -36,7 +50,7 @@
     }
 
     &:nth-child(1) &--state {
-      background-color: #A05E02;
+      background-color: #a05e02;
     }
 
     &:nth-child(2) &--state {
@@ -44,21 +58,21 @@
     }
 
     &:nth-child(3) &--state {
-      background-color: #ECC064;
+      background-color: #ecc064;
       color: #074030;
     }
 
     &:nth-child(4) &--state {
-      background-color: #15694F;
+      background-color: #15694f;
     }
 
     &:nth-child(5) &--state {
-      background-color: #B88744;
+      background-color: #b88744;
     }
 
     &:nth-child(6) &--state {
-      background-color: #F7F0E8;
-      color: #2B2B2A;
+      background-color: #f7f0e8;
+      color: #2b2b2a;
     }
   }
 
@@ -67,16 +81,22 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
+
+
+    @include onTablet--m {
+      align-items: start;
+
+    }
 
     & img {
       width: 100%;
       object-fit: cover;
+
     }
 
     &--conditions-graph {
       width: 100%;
-      object-fit: cover;
+      object-fit: contain;
       object-position: left;
     }
   }
