--- a/src/components/ModulesList/ModulesList.scss
+++ b/src/components/ModulesList/ModulesList.scss
@@ -24,6 +24,7 @@
     display: flex;
     flex-direction: row;
 
+
     margin: 0 0 24px;
 
     @include onTablet--s {
@@ -38,7 +39,6 @@
   justify-content: space-between;
 
   @include onTablet--s {
-    // height: 100%;
     margin: 0;
   }
 
@@ -48,6 +48,7 @@
 
     height: 100%;
     justify-content: space-between;
+    align-items: center;
   }
 
   &__number {
@@ -60,7 +61,17 @@
     font-weight: 700;
     text-shadow: #0d4f3a71 2px 2px 10px;
 
+
     color: $colorGreen;
+    @include onTablet--s {
+      font-size: 12px;
+    }
+    @include onTablet--m {
+      font-size: 16px;
+    }
+    @include onDesktop {
+      font-size: 15px;
+    }
   }
 
   &__carousel {
