--- a/src/components/Participants/Participants.scss
+++ b/src/components/Participants/Participants.scss
@@ -65,6 +65,7 @@
   &__image {
     margin: 0 0 24px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 
