--- a/src/components/ReviewItem/ReviewItem.scss
+++ b/src/components/ReviewItem/ReviewItem.scss
@@ -1,3 +1,6 @@
+@import '../../styles/utils/vars';
+@import '../../styles/utils/mixins';
+
 .review {
   padding: 32px 32px 24px;
   width: 280px;
@@ -5,6 +8,11 @@
   align-self: center;
   flex-direction: column;
   align-items: center;
+
+
+  @include onTablet--s {
+    width: 100%;
+  }
 
   &__image-container {
     margin: 0 0 12px;
