--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -1,6 +1,7 @@
 .button {
   display: flex;
-  width: 100%;
+  width: fit-content;
+  padding: 0 18px;
   height: 46px;
   justify-content: center;
   align-items: center;
